--- a/app/src/main/res/layout/activity_estoque.xml
+++ b/app/src/main/res/layout/activity_estoque.xml
@@ -14,7 +14,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingBottom="10dp">
 
             <TextView
                 android:id="@+id/textView4"
@@ -40,28 +42,30 @@
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/botao_geral"
+                android:gravity="center"
                 android:onClick="atualizarEstoque"
                 android:text="Confirmar Alterações" />
 
             <Button
                 android:id="@+id/btnAdicionar"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/botao_geral"
+                android:onClick="IrTelaCadastroProduto"
                 android:text="Adicionar Produtos" />
 
             <Button
                 android:id="@+id/btnVoltarEstoque"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
