--- a/app/src/main/res/layout/modelo_estoque.xml
+++ b/app/src/main/res/layout/modelo_estoque.xml
@@ -51,12 +51,12 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/txtPreco"
-                android:layout_width="225dp"
+                android:layout_width="190dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="96dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.916"
+                app:layout_constraintHorizontal_bias="0.406"
                 app:layout_constraintStart_toEndOf="@+id/imgProduto">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -69,10 +69,10 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="225dp"
+                android:layout_width="190dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.923"
+                app:layout_constraintHorizontal_bias="0.406"
                 app:layout_constraintStart_toEndOf="@+id/imgProduto"
                 app:layout_constraintTop_toBottomOf="@+id/textTitulo">
 
@@ -86,10 +86,11 @@
                 android:id="@+id/cBPromocao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/itim"
                 android:text="Promoção"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.56"
+                app:layout_constraintHorizontal_bias="0.54"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtPreco"
                 app:layout_constraintVertical_bias="0.0" />
@@ -104,7 +105,7 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.492"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cBPromocao"
                 app:layout_constraintVertical_bias="0.0" />
