Retoque de Design 3

--- a/app/src/main/res/layout/activity_adicionar_produtos.xml
+++ b/app/src/main/res/layout/activity_adicionar_produtos.xml
@@ -7,21 +7,58 @@
     android:background="@color/bege"
     tools:context=".Activity_Adicionar_Produtos">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutBarraSuperior"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/borda_arrendondada_inferior_verde_escuro"
+        android:padding="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/txtTituloProdutos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/itim"
+            android:text="Adicionar Produtos"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:onClick="voltarTelaPedidos"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.01"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/voltar" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputQnt"
-        android:layout_width="100dp"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="204dp"
         android:hint="Quantidade"
         android:textColorHint="@color/verde_fundo_categoria"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.575"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputNomeProduto"
-        app:layout_constraintVertical_bias="0.014">
+        app:layout_constraintVertical_bias="0.015">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:shadowColor="@color/verde_fundo_categoria"
@@ -33,21 +70,22 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputPreco"
-        android:layout_width="100dp"
-        android:layout_height="65dp"
+        android:layout_width="175dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="221dp"
+        android:layout_marginEnd="16dp"
         android:hint="Preço"
         android:textColorHint="@color/verde_fundo_categoria"
         app:boxStrokeColor="@color/verde_fundo_categoria"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.437"
-        app:layout_constraintStart_toEndOf="@+id/inputQnt"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputNomeProduto"
         app:layout_constraintVertical_bias="0.015">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputPreco"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:shadowColor="@color/verde_fundo_categoria"
@@ -60,21 +98,20 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputNomeProduto"
-        android:layout_width="214dp"
+        android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:hint="Nome Produto"
         android:textColorHint="@color/verde_fundo_categoria"
         app:boxStrokeColor="@color/verde_fundo_categoria"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toEndOf="@+id/imgAddProduto"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.029">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutBarraSuperior"
+        app:layout_constraintVertical_bias="0.062">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputNomeProduto"
-            android:layout_width="214dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:shadowColor="@color/verde_fundo_categoria"
             android:textColorHighlight="@color/verde_fundo_categoria"
@@ -85,51 +122,22 @@
 
     <Spinner
         android:id="@+id/spinnerAddProduto"
-        android:layout_width="214dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="432dp"
+        android:layout_width="379dp"
+        android:layout_height="59dp"
         android:background="@drawable/borda_spinner"
         android:dropDownSelector="@color/verde_fundo_categoria"
         android:entries="@array/filtro_categoria_add_produto"
         android:popupBackground="#0F5929"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.419"
-        app:layout_constraintStart_toEndOf="@+id/imgAddProduto"
-        app:layout_constraintTop_toBottomOf="@+id/inputQnt"
-        app:layout_constraintVertical_bias="0.264" />
-
-    <ImageView
-        android:id="@+id/imgAddProduto"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="102dp"
-
-
-        android:layout_marginEnd="245dp"
-        android:layout_marginBottom="479dp"
-        android:accessibilityLiveRegion="assertive"
-        android:adjustViewBounds="false"
-        android:backgroundTint="@color/verde_fundo_categoria"
-        android:contextClickable="false"
-        android:cropToPadding="false"
-        android:onClick="CarregarImage"
-        android:radius="4dp"
-        android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bebidas"
-        tools:srcCompat="@drawable/borda_quatro_pontas_arrendondadas_verde_escuro" />
+        app:layout_constraintTop_toBottomOf="@+id/inputQnt"
+        app:layout_constraintVertical_bias="0.019" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputIngredientes"
         android:layout_width="379dp"
         android:layout_height="104dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:hint="Ingredientes"
         android:textColorHint="@color/verde_fundo_categoria"
         app:boxStrokeColor="@color/verde_fundo_categoria"
@@ -137,7 +145,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerAddProduto"
-        app:layout_constraintVertical_bias="0.033">
+        app:layout_constraintVertical_bias="0.023">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputDingredientes"
@@ -149,24 +157,6 @@
             android:textColorLink="@color/verde_fundo_categoria"
             android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/borda_arrendondada_inferior_verde_escuro"
-        android:fontFamily="@font/itim"
-        android:padding="15dp"
-        android:text="Adicionar Produtos"
-        android:textAlignment="center"
-        android:textColor="@color/bege"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btn_finalizar"
@@ -182,14 +172,15 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="10dp"
+        android:layout_width="15dp"
         android:layout_height="10dp"
         android:layout_weight="1"
         app:layout_constraintBottom_toBottomOf="@+id/spinnerAddProduto"
         app:layout_constraintEnd_toEndOf="@+id/spinnerAddProduto"
-        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="@+id/spinnerAddProduto"
         app:layout_constraintTop_toTopOf="@+id/spinnerAddProduto"
+        app:layout_constraintVertical_bias="0.51"
         app:srcCompat="@drawable/seta_spinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
