--- a/app/src/main/res/layout/activity_estoque.xml
+++ b/app/src/main/res/layout/activity_estoque.xml
@@ -18,17 +18,41 @@
             android:orientation="vertical"
             android:paddingBottom="10dp">
 
-            <TextView
-                android:id="@+id/textView4"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layoutBarraSuperior"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@drawable/borda_arrendondada_inferior_verde_escuro"
-                android:fontFamily="sans-serif"
                 android:padding="15dp"
-                android:text="Estoque"
-                android:textAlignment="center"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/txtTituloProdutos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/itim"
+                    android:text="Estoque"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:onClick="voltarTelaEstoque"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.01"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/voltar" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerEstoque"
@@ -71,6 +95,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/botao_geral"
+                android:onClick="voltarTelaEstoque"
                 android:text="Voltar" />
 
         </LinearLayout>
