--- a/app/src/main/res/layout/fragment_pedidos_para_retirar.xml
+++ b/app/src/main/res/layout/fragment_pedidos_para_retirar.xml
@@ -10,15 +10,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#FFEEE1"
         android:padding="8dp">
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/itim"
             android:text="Ainda não retirados"
             android:textAlignment="textStart"
             android:textColor="@color/verde_fundo_categoria"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
