--- a/app/src/main/res/layout/item_carrinho.xml
+++ b/app/src/main/res/layout/item_carrinho.xml
@@ -17,8 +17,8 @@
         android:text="Nome do produto"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/layoutQuantidade"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.097"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -33,8 +33,8 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/layoutQuantidade"
+        app:layout_constraintHorizontal_bias="0.898"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -55,26 +55,31 @@
             app:layout_constraintBottom_toBottomOf="@+id/txtQuantidade"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txtQuantidade"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@mipmap/remove" />
 
         <TextView
             android:id="@+id/txtQuantidade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:fontFamily="@font/itim"
             android:text="No"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imgRetirar"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/imgAdicionar"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:layout_marginStart="12dp"
             app:layout_constraintBottom_toBottomOf="@+id/txtQuantidade"
             app:layout_constraintStart_toEndOf="@+id/txtQuantidade"
             app:layout_constraintTop_toTopOf="@+id/txtQuantidade"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@mipmap/add" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
